resolved overlapping issue
Resolved an issue of the aside containers overlapping on the home page.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -299,7 +299,7 @@ body {
     padding: 1rem;
     border-radius: 1.6rem;
     color: #0A0A0A;
-    margin-top: 32px;
+    margin-top: 50px;
 }
 
 /* MILESTONES LIST */
